"""Tests for the ramses_cc initialization and lifecycle."""

from __future__ import annotations

from typing import Any
from unittest.mock import AsyncMock, MagicMock, PropertyMock, patch

import pytest
from homeassistant.config_entries import ConfigEntryState
from homeassistant.core import HomeAssistant
from homeassistant.exceptions import ConfigEntryNotReady
from homeassistant.setup import async_setup_component
from syrupy.assertion import SnapshotAssertion

from custom_components.ramses_cc import (
    _healed_serial_port_options,
    async_migrate_entry,
    async_register_domain_services,
    async_unload_entry,
    async_update_listener,
)
from custom_components.ramses_cc.const import (
    CONF_ADVANCED_FEATURES,
    CONF_SEND_PACKET,
    DOMAIN,
)
from ramses_tx import exceptions as exc

from ..virtual_rf import VirtualRf
from .common import configuration_fixture, storage_fixture
from .const import TEST_SYSTEMS

# Constants
DEVICE_ID = "32:123456"


@pytest.fixture
def mock_coordinator(hass: HomeAssistant) -> MagicMock:
    """Return a mock coordinator.

    :param hass: The Home Assistant instance.
    :return: A mock coordinator object.
    """
    coordinator = MagicMock()
    coordinator.hass = hass
    coordinator.async_unload_platforms = AsyncMock(return_value=True)
    coordinator.async_bind_device = AsyncMock()
    coordinator.async_force_update = AsyncMock()
    coordinator.async_send_packet = AsyncMock()
    coordinator.async_set_fan_param = AsyncMock()
    coordinator.async_get_fan_param = AsyncMock()
    coordinator._async_run_fan_param_sequence = AsyncMock()
    coordinator.async_start = AsyncMock()
    coordinator.async_setup = AsyncMock()
    coordinator._entities = {}
    # Mock client for domain events
    coordinator.client = MagicMock()
    return coordinator


@pytest.mark.parametrize("instance", TEST_SYSTEMS)
async def test_entities(
    hass: HomeAssistant,
    hass_storage: dict[str, Any],
    instance: str,
    rf: VirtualRf,
    snapshot: SnapshotAssertion,
) -> None:
    """Test State after setup of an instance of the integration."""

    hass_storage[DOMAIN] = storage_fixture(instance)

    config = configuration_fixture(instance)
    config[DOMAIN]["serial_port"] = rf.ports[0]

    # Convert legacy packet_log keys from fixtures to the new schema dynamically
    if "packet_log" in config.get(DOMAIN, {}) and isinstance(
        config[DOMAIN]["packet_log"], dict
    ):
        pkt_log = config[DOMAIN]["packet_log"]
        if "file_name" in pkt_log:
            file_prefix = pkt_log.pop("file_name").split(".")[0]
            pkt_log["packet_log_prefix"] = file_prefix
        if "rotate_backups" in pkt_log:
            pkt_log["packet_log_retention_days"] = pkt_log.pop("rotate_backups")

    # Ensure VirtualRf gateway is in known_list to prevent strict filtering drops
    config[DOMAIN].setdefault("known_list", {})["18:006402"] = {"class": "HGI"}

    # Patch 'available' to always be True during setup so historical packet logs
    # render fully populated states in the snapshot, bypassing 60-min timeout.
    with (
        patch(
            "custom_components.ramses_cc.entity.RamsesEntity.available",
            new_callable=PropertyMock,
            return_value=True,
        ),
        patch(
            "custom_components.ramses_cc.binary_sensor.RamsesLogbookBinarySensor.available",
            new_callable=PropertyMock,
            return_value=True,
        ),
        patch(
            "custom_components.ramses_cc.binary_sensor.RamsesSystemBinarySensor.available",
            new_callable=PropertyMock,
            return_value=True,
        ),
    ):
        assert await async_setup_component(hass, DOMAIN, config)
        await hass.async_block_till_done()

    entry = None
    try:
        entries = hass.config_entries.async_entries(DOMAIN)
        if entries:
            entry = entries[0]
            assert entry.state == ConfigEntryState.LOADED

        assert hass.states.async_all() == snapshot

    finally:  # Prevent useless errors in teardown
        if entry:
            assert await hass.config_entries.async_unload(entry.entry_id)


async def test_setup_entry_transport_error(
    hass: HomeAssistant, mock_coordinator: MagicMock
) -> None:
    """Test setup fails with ConfigEntryNotReady on TransportError."""
    entry = MagicMock()
    entry.entry_id = "test_transport_error"
    # Ensure options are present to avoid KeyError
    entry.options = {}

    # Mock RamsesCoordinator class to return our mock_coordinator
    with (
        patch(
            "custom_components.ramses_cc.RamsesCoordinator",
            return_value=mock_coordinator,
        ),
        patch("custom_components.ramses_cc.async_register_domain_services"),
        # no events platform setup
    ):
        # Configure coordinator.async_setup to raise TransportError
        mock_coordinator.async_setup.side_effect = exc.TransportError("Boom")

        # Import the function to test
        from custom_components.ramses_cc import async_setup_entry

        # Initialize data structure
        hass.data[DOMAIN] = {}

        # Expect ConfigEntryNotReady
        with pytest.raises(ConfigEntryNotReady):
            await async_setup_entry(hass, entry)

        # Verify cleanup
        assert entry.entry_id not in hass.data[DOMAIN]


async def test_setup_entry_source_invalid(
    hass: HomeAssistant, mock_coordinator: MagicMock
) -> None:
    """Test setup returns False on TransportSourceInvalid."""
    entry = MagicMock()
    entry.entry_id = "test_source_invalid"
    entry.options = {}

    with (
        patch(
            "custom_components.ramses_cc.RamsesCoordinator",
            return_value=mock_coordinator,
        ),
        patch("custom_components.ramses_cc.async_register_domain_services"),
        # no events platform setup
    ):
        # Configure coordinator.async_setup to raise TransportSourceInvalid
        mock_coordinator.async_setup.side_effect = exc.TransportSourceInvalid(
            "Bad Path"
        )

        from custom_components.ramses_cc import async_setup_entry

        hass.data[DOMAIN] = {}

        # Expect return False
        result = await async_setup_entry(hass, entry)
        assert result is False

        # Verify cleanup
        assert entry.entry_id not in hass.data[DOMAIN]


async def test_setup_entry_already_setup(
    hass: HomeAssistant, mock_coordinator: MagicMock
) -> None:
    """Test setup returns True if entry is already set up."""
    entry = MagicMock()
    entry.entry_id = "test_already_setup"

    # Pre-populate hass.data to simulate already setup entry
    hass.data[DOMAIN] = {entry.entry_id: mock_coordinator}

    from custom_components.ramses_cc import async_setup_entry

    # Should return True immediately
    assert await async_setup_entry(hass, entry) is True


async def test_async_update_listener(hass: HomeAssistant) -> None:
    """Test the update listener reloads the entry."""
    entry = MagicMock()
    entry.entry_id = "test_reload"

    with patch.object(hass.config_entries, "async_reload", AsyncMock()) as mock_reload:
        await async_update_listener(hass, entry)
        mock_reload.assert_called_once_with(entry.entry_id)


async def test_async_unload_entry_success(
    hass: HomeAssistant, mock_coordinator: MagicMock
) -> None:
    """Test successful unloading of a config entry."""
    entry = MagicMock()
    entry.entry_id = "test_unload_success"

    hass.data[DOMAIN] = {entry.entry_id: mock_coordinator}
    hass.services.async_register(DOMAIN, "test_service", lambda x: None)

    assert await async_unload_entry(hass, entry) is True
    assert entry.entry_id not in hass.data[DOMAIN]


async def test_async_unload_entry_failure(
    hass: HomeAssistant, mock_coordinator: MagicMock
) -> None:
    """Test unloading failure when platforms fail to unload."""
    entry = MagicMock()
    entry.entry_id = "test_unload_fail"
    hass.data[DOMAIN] = {entry.entry_id: mock_coordinator}

    # Simulate platform unload failure
    mock_coordinator.async_unload_platforms.return_value = False

    assert await async_unload_entry(hass, entry) is False
    # Coordinator should still be in hass.data if unload failed
    assert entry.entry_id in hass.data[DOMAIN]


async def test_init_service_wrappers(
    hass: HomeAssistant, mock_coordinator: MagicMock
) -> None:
    """Exercise the service wrapper functions in __init__.py."""
    entry = MagicMock()
    entry.options = {}  # No advanced features

    # Register the services
    async_register_domain_services(hass, entry, mock_coordinator)

    # 1. Bind Device
    await hass.services.async_call(
        DOMAIN,
        "bind_device",
        {"device_id": DEVICE_ID, "offer": {"1FC9": None}},
        blocking=True,
    )
    assert mock_coordinator.async_bind_device.called

    # 2. Force Update
    await hass.services.async_call(
        DOMAIN,
        "force_update",
        {},
        blocking=True,
    )
    assert mock_coordinator.async_force_update.called

    # 3. Set Fan Param
    await hass.services.async_call(
        DOMAIN,
        "set_fan_param",
        {"device_id": DEVICE_ID, "param_id": "01", "value": 1.0},
        blocking=True,
    )
    assert mock_coordinator.async_set_fan_param.called

    # 4. Get Fan Param
    await hass.services.async_call(
        DOMAIN,
        "get_fan_param",
        {"device_id": DEVICE_ID, "param_id": "01"},
        blocking=True,
    )
    assert mock_coordinator.async_get_fan_param.called

    # 5. Update Fan Params
    await hass.services.async_call(
        DOMAIN,
        "update_fan_params",
        {"device_id": DEVICE_ID},
        blocking=True,
    )
    assert mock_coordinator._async_run_fan_param_sequence.called

    # 6. Check that Send Packet is NOT registered by default
    assert not hass.services.has_service(DOMAIN, "send_packet")


async def test_init_service_wrappers_advanced(
    hass: HomeAssistant, mock_coordinator: MagicMock
) -> None:
    """Test registration of advanced services (send_packet)."""
    entry = MagicMock()
    # Enable advanced features
    entry.options = {CONF_ADVANCED_FEATURES: {CONF_SEND_PACKET: True}}

    async_register_domain_services(hass, entry, mock_coordinator)

    # Check that Send Packet IS registered
    assert hass.services.has_service(DOMAIN, "send_packet")

    # Call it to ensure wrapper works
    await hass.services.async_call(
        DOMAIN,
        "send_packet",
        {
            "device_id": DEVICE_ID,
            "verb": "RQ",
            "code": "1234",
            "payload": "00",
        },
        blocking=True,
    )
    assert mock_coordinator.async_send_packet.called


async def test_async_migrate_entry_v1_to_v2(hass: HomeAssistant) -> None:
    """Test the migration of a config entry from version 1 to 2."""
    entry = MagicMock()
    entry.version = 1
    entry.entry_id = "test_migration_v1_v2"

    # Mocking legacy options that need to be cleaned up
    entry.options = {
        "packet_log": {
            "file_name": "packet.log",
            "buffer_capacity": 100,
        },
        "ramses_rf": {
            "use_database": True,
            "database_file": "ramses.db",
            "enforce_known_list": True,
        },
        "other_setting": "kept",
    }

    with patch.object(hass.config_entries, "async_update_entry") as mock_update:
        result = await async_migrate_entry(hass, entry)

        assert result is True
        mock_update.assert_called_once_with(
            entry,
            options={
                "packet_log": {
                    "buffer_capacity": 100,
                },
                "ramses_rf": {
                    "enforce_known_list": True,
                },
                "other_setting": "kept",
            },
            version=2,
        )


async def test_async_migrate_entry_v2_no_change(hass: HomeAssistant) -> None:
    """Test that a version 2 config entry is not migrated or modified."""
    entry = MagicMock()
    entry.version = 2
    entry.entry_id = "test_no_migration_v2"
    entry.options = {"packet_log": {}}

    with patch.object(hass.config_entries, "async_update_entry") as mock_update:
        result = await async_migrate_entry(hass, entry)

        assert result is True
        mock_update.assert_not_called()


def test_healed_serial_port_options_from_mqtt_hints() -> None:
    """Test setup-time healing when MQTT hints exist in options."""

    healed = _healed_serial_port_options(
        {
            "serial_port": {},
            "ramses_rf": {"log_all_mqtt": True},
            "mqtt_topic": "RAMSES/GATEWAY_SIM",
        },
        mqtt_entries_present=False,
    )

    assert healed is not None
    assert healed["serial_port"] == {"port_name": "mqtt_ha"}
    assert healed["mqtt_use_ha"] is True


def test_healed_serial_port_options_no_heal_without_mqtt() -> None:
    """Test no healing occurs when MQTT is not implied."""

    healed = _healed_serial_port_options(
        {
            "serial_port": {},
            "ramses_rf": {"log_all_mqtt": False},
        },
        mqtt_entries_present=False,
    )

    assert healed is None
