# serializer version: 1
# name: test_entities[default]
  list([
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'problem',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'CTL 01:145038 System status',
        'id': '01:145038',
        'working_schema': dict({
          'orphans': list([
          ]),
          'stored_hotwater': dict({
          }),
          'system': dict({
            'appliance_control': None,
          }),
          'underfloor_heating': dict({
          }),
          'zones': dict({
          }),
        }),
      }),
      'context': <ANY>,
      'entity_id': 'binary_sensor.ctl_01_145038_system_status',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'off',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'active_faults': None,
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'problem',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'CTL 01:145038 Active fault',
        'id': '01:145038',
        'latest_event': None,
        'latest_fault': None,
      }),
      'context': <ANY>,
      'entity_id': 'binary_sensor.ctl_01_145038_active_fault',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'battery_level': None,
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'battery',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'THM 03:123456 Battery',
        'id': '03:123456',
      }),
      'context': <ANY>,
      'entity_id': 'binary_sensor.thm_03_123456_battery',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'off',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'config': dict({
          'enforce_known_list': True,
        }),
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'problem',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'HGI 18:006402 Gateway status',
        'id': '18:006402',
        'is_evofw3': True,
        'known_list': list([
          dict({
            '01:145038': dict({
              'class': 'CTL',
            }),
          }),
          dict({
            '03:123456': dict({
              'class': 'THM',
              'faked': True,
            }),
          }),
          dict({
            '10:123456': dict({
              'class': 'OTB',
            }),
          }),
          dict({
            '18:006402': dict({
              'class': 'HGI',
            }),
          }),
        ]),
        'schema': dict({
          '01:145038': dict({
            'system': dict({
              'appliance_control': None,
            }),
          }),
        }),
      }),
      'context': <ANY>,
      'entity_id': 'binary_sensor.hgi_18_006402_gateway_status',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'on',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'CTL 01:145038 System info',
        'id': '01:145038',
        'working_schema': dict({
          'orphans': list([
          ]),
          'stored_hotwater': dict({
          }),
          'system': dict({
            'appliance_control': None,
          }),
          'underfloor_heating': dict({
          }),
          'zones': dict({
          }),
        }),
      }),
      'context': <ANY>,
      'entity_id': 'sensor.ctl_01_145038_system_info',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '01:145038',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'CTL 01:145038 Heat demand',
        <EntityStateAttribute.ICON: 'icon'>: 'mdi:radiator-off',
        'id': '01:145038',
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.ctl_01_145038_heat_demand',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'THM 03:123456 Temperature',
        'id': '03:123456',
        'setpoint': None,
        <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
        <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.thm_03_123456_temperature',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'data': dict({
          'type': <RamsesEventType.LEARN: 'ramses_cc_learn'>,
        }),
        <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
        <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
          <RamsesEventType.LEARN: 'ramses_cc_learn'>,
        ]),
        'type': <RamsesEventType.LEARN: 'ramses_cc_learn'>,
      }),
      'context': <ANY>,
      'entity_id': 'event.ramses_cc_learn_event',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'data': dict({
          'type': <RamsesEventType.REGEX: 'ramses_cc_regex_match'>,
        }),
        <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
        <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
          <RamsesEventType.REGEX: 'ramses_cc_regex_match'>,
        ]),
        'type': <RamsesEventType.REGEX: 'ramses_cc_regex_match'>,
      }),
      'context': <ANY>,
      'entity_id': 'event.ramses_cc_regex_event',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
  ])
# ---
# name: test_entities[minimal]
  list([
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'config': dict({
          'enforce_known_list': True,
        }),
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'problem',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'HGI 18:006402 Gateway status',
        'id': '18:006402',
        'is_evofw3': True,
        'known_list': list([
          dict({
            '18:006402': dict({
              'class': 'HGI',
            }),
          }),
        ]),
        'schema': dict({
        }),
      }),
      'context': <ANY>,
      'entity_id': 'binary_sensor.hgi_18_006402_gateway_status',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'on',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'data': dict({
          'type': <RamsesEventType.LEARN: 'ramses_cc_learn'>,
        }),
        <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
        <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
          <RamsesEventType.LEARN: 'ramses_cc_learn'>,
        ]),
        'type': <RamsesEventType.LEARN: 'ramses_cc_learn'>,
      }),
      'context': <ANY>,
      'entity_id': 'event.ramses_cc_learn_event',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'data': dict({
          'type': <RamsesEventType.REGEX: 'ramses_cc_regex_match'>,
        }),
        <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
        <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
          <RamsesEventType.REGEX: 'ramses_cc_regex_match'>,
        ]),
        'type': <RamsesEventType.REGEX: 'ramses_cc_regex_match'>,
      }),
      'context': <ANY>,
      'entity_id': 'event.ramses_cc_regex_event',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
  ])
# ---
# name: test_entities[remotes]
  list([
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'battery_level': None,
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'battery',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'REM 29:179540 Battery',
        'id': '29:179540',
      }),
      'context': <ANY>,
      'entity_id': 'binary_sensor.rem_29_179540_battery',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'off',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'config': dict({
          'enforce_known_list': True,
        }),
        <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'problem',
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'HGI 18:006402 Gateway status',
        'id': '18:006402',
        'is_evofw3': True,
        'known_list': list([
          dict({
            '18:006402': dict({
              'class': 'HGI',
            }),
          }),
          dict({
            '29:179540': dict({
              'class': 'REM',
              'faked': True,
            }),
          }),
          dict({
            '32:157747': dict({
              'class': 'FAN',
            }),
          }),
        ]),
        'schema': dict({
        }),
      }),
      'context': <ANY>,
      'entity_id': 'binary_sensor.hgi_18_006402_gateway_status',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'off',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'REM 29:179540 Fan mode',
        'id': '29:179540',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.rem_29_179540_fan_mode',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'REM 29:179540 Fan rate',
        'id': '29:179540',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.rem_29_179540_fan_rate',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        <EntityStateAttribute.ASSUMED_STATE: 'assumed_state'>: True,
        'commands': NodeDictClass({
          'auto': ' I --- 29:179540 32:157747 --:------ 22F1 003 000404',
          'away': ' I --- 29:179540 32:157747 --:------ 22F1 003 000004',
          'high': ' I --- 29:179540 32:157747 --:------ 22F1 003 000304',
        }),
        <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'REM 29:179540',
        'id': '29:179540',
        <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <RemoteEntityFeature: 3>,
      }),
      'context': <ANY>,
      'entity_id': 'remote.rem_29_179540',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'on',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'data': dict({
          'type': <RamsesEventType.LEARN: 'ramses_cc_learn'>,
        }),
        <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
        <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
          <RamsesEventType.LEARN: 'ramses_cc_learn'>,
        ]),
        'type': <RamsesEventType.LEARN: 'ramses_cc_learn'>,
      }),
      'context': <ANY>,
      'entity_id': 'event.ramses_cc_learn_event',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'data': dict({
          'type': <RamsesEventType.REGEX: 'ramses_cc_regex_match'>,
        }),
        <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
        <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
          <RamsesEventType.REGEX: 'ramses_cc_regex_match'>,
        ]),
        'type': <RamsesEventType.REGEX: 'ramses_cc_regex_match'>,
      }),
      'context': <ANY>,
      'entity_id': 'event.ramses_cc_regex_event',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
  ])
# ---
